# victor

./: .gitignore  .rustfmt  Cargo.toml  LICENSE.md  LICENSE_MIT  README.md  rust-toolchain.toml
.cargo/: config
.github/workflows/: ci.yml  publish.yaml
examples/: in_memory.rs  native_filesystem.rs
src/: db.rs  decomposition.rs  filesystem.rs  gpu.rs  lib.rs  packed_vector.rs  similarity.rs  tests.rs  utils.rs  victor.rs
src/filesystem/: memory.rs  mod.rs  native.rs  web.rs
src/shaders/: embedding_lookup.wgsl
www/: .nvmrc  .prettierrc  bootstrap.ts  index.html  index.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/src/: index.ts
www/types/: openai.ts
