[package]
name = "victor"
version = "0.1.0"
authors = ["Sam Hall <samuel27hall@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.64", features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "Blob",
] }
bincode = { version = "1.3.3" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
