[package]
name = "victor-db"
version = "0.1.1"
authors = ["Sam Hall <s@muel.email", "Andre Popovitch <andre@popovit.ch>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = { versions = "0.32.3", features = ["serde-serialize"] }
bincode = { version = "1.3.3" }
serde = { version = "1.0.183", features = ["derive"] }
console_error_panic_hook = "0.1.7"
async-trait = "0.1"
sha256 = { version = "1", default-features = false }
wgpu = "0.18"
bytemuck = { version = "1.14.3", features = ["derive"] }
rand = "0.8.5"
futures-intrusive = "0.5.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.64", features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "Blob",
    "Window",
    "Navigator",
    "StorageManager"
] }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
tokio = { version = "1", features = ["rt", "macros"] }
rand = "0.8.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
