[package]
name = "victor-db"
version = "0.2.0"
authors = ["Sam Hall <s@muel.email", "Andre Popovitch <andre@popovit.ch>"]
edition = "2021"
license-file = "LICENSE.md"
description = "A browser-optimized vector database"
repository = "https://github.com/not-pizza/victor/"
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
bincode = { version = "1" }
serde = { version = "1", features = ["derive"] }
console_error_panic_hook = "0"
async-trait = "0.1"
sha256 = { version = "1", default-features = false }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "Blob",
    "Window",
    "Navigator",
    "StorageManager",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util"] }
fastembed = "4.3.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
rand = "0.8"
tokio-test = "0.4"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
